--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <button type="submit" class="search-button">Search</button>
     </form>
     <ul class="gallery"></ul>
-    <div class="loader"></div>
+    <div class="loader hide"></div>
     <button class="load-more-button hide">Load more</button>
     <script type="module" src="./main.js"></script>
   </body>
